[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Actor/Boss/DemonCyclop/Faceset.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Menu/PortraitInfo.gd" type="Script" id=2]

[node name="PortraitInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_right = 640.0
margin_bottom = 360.0

[node name="Top" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_right = 640.0
margin_bottom = 38.0
size_flags_vertical = 2
alignment = 1

[node name="FirstBox" type="HBoxContainer" parent="Container/VBoxContainer/Top"]
margin_right = 318.0
margin_bottom = 38.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Portrait" type="TextureRect" parent="Container/VBoxContainer/Top/FirstBox"]
margin_right = 38.0
margin_bottom = 38.0
texture = ExtResource( 1 )

[node name="Info" type="VBoxContainer" parent="Container/VBoxContainer/Top/FirstBox"]
margin_left = 42.0
margin_right = 92.0
margin_bottom = 38.0

[node name="Life" type="HBoxContainer" parent="Container/VBoxContainer/Top/FirstBox/Info"]
margin_right = 50.0
margin_bottom = 14.0

[node name="LifeLabel" type="Label" parent="Container/VBoxContainer/Top/FirstBox/Info/Life"]
margin_right = 27.0
margin_bottom = 14.0
text = "Life:"

[node name="LifeValue" type="Label" parent="Container/VBoxContainer/Top/FirstBox/Info/Life"]
margin_left = 31.0
margin_right = 39.0
margin_bottom = 14.0
text = "3"

[node name="Mana" type="HBoxContainer" parent="Container/VBoxContainer/Top/FirstBox/Info"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 32.0

[node name="ManaLabel" type="Label" parent="Container/VBoxContainer/Top/FirstBox/Info/Mana"]
margin_right = 38.0
margin_bottom = 14.0
text = "Mana:"

[node name="ManaValue" type="Label" parent="Container/VBoxContainer/Top/FirstBox/Info/Mana"]
margin_left = 42.0
margin_right = 50.0
margin_bottom = 14.0
text = "3"

[node name="SecondBox" type="HBoxContainer" parent="Container/VBoxContainer/Top"]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 2

[node name="Info" type="VBoxContainer" parent="Container/VBoxContainer/Top/SecondBox"]
margin_left = 226.0
margin_right = 276.0
margin_bottom = 38.0

[node name="Life" type="HBoxContainer" parent="Container/VBoxContainer/Top/SecondBox/Info"]
margin_right = 50.0
margin_bottom = 14.0

[node name="LifeLabel" type="Label" parent="Container/VBoxContainer/Top/SecondBox/Info/Life"]
margin_right = 27.0
margin_bottom = 14.0
text = "Life:"

[node name="LifeValue" type="Label" parent="Container/VBoxContainer/Top/SecondBox/Info/Life"]
margin_left = 31.0
margin_right = 39.0
margin_bottom = 14.0
text = "3"

[node name="Mana" type="HBoxContainer" parent="Container/VBoxContainer/Top/SecondBox/Info"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 32.0

[node name="ManaLabel" type="Label" parent="Container/VBoxContainer/Top/SecondBox/Info/Mana"]
margin_right = 38.0
margin_bottom = 14.0
text = "Mana:"

[node name="ManaValue" type="Label" parent="Container/VBoxContainer/Top/SecondBox/Info/Mana"]
margin_left = 42.0
margin_right = 50.0
margin_bottom = 14.0
text = "3"

[node name="Portrait" type="TextureRect" parent="Container/VBoxContainer/Top/SecondBox"]
margin_left = 280.0
margin_right = 318.0
margin_bottom = 38.0
texture = ExtResource( 1 )

[node name="Bottom" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_top = 322.0
margin_right = 640.0
margin_bottom = 360.0
alignment = 2

[node name="ThirdBox" type="HBoxContainer" parent="Container/VBoxContainer/Bottom"]
margin_right = 318.0
margin_bottom = 38.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Portrait" type="TextureRect" parent="Container/VBoxContainer/Bottom/ThirdBox"]
margin_right = 38.0
margin_bottom = 38.0
texture = ExtResource( 1 )

[node name="Info" type="VBoxContainer" parent="Container/VBoxContainer/Bottom/ThirdBox"]
margin_left = 42.0
margin_right = 92.0
margin_bottom = 38.0

[node name="Life" type="HBoxContainer" parent="Container/VBoxContainer/Bottom/ThirdBox/Info"]
margin_right = 50.0
margin_bottom = 14.0

[node name="LifeLabel" type="Label" parent="Container/VBoxContainer/Bottom/ThirdBox/Info/Life"]
margin_right = 27.0
margin_bottom = 14.0
text = "Life:"

[node name="LifeValue" type="Label" parent="Container/VBoxContainer/Bottom/ThirdBox/Info/Life"]
margin_left = 31.0
margin_right = 39.0
margin_bottom = 14.0
text = "3"

[node name="Mana" type="HBoxContainer" parent="Container/VBoxContainer/Bottom/ThirdBox/Info"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 32.0

[node name="ManaLabel" type="Label" parent="Container/VBoxContainer/Bottom/ThirdBox/Info/Mana"]
margin_right = 38.0
margin_bottom = 14.0
text = "Mana:"

[node name="ManaValue" type="Label" parent="Container/VBoxContainer/Bottom/ThirdBox/Info/Mana"]
margin_left = 42.0
margin_right = 50.0
margin_bottom = 14.0
text = "3"

[node name="ForthBox" type="HBoxContainer" parent="Container/VBoxContainer/Bottom"]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 2

[node name="Info" type="VBoxContainer" parent="Container/VBoxContainer/Bottom/ForthBox"]
margin_left = 226.0
margin_right = 276.0
margin_bottom = 38.0

[node name="Life" type="HBoxContainer" parent="Container/VBoxContainer/Bottom/ForthBox/Info"]
margin_right = 50.0
margin_bottom = 14.0

[node name="LifeLabel" type="Label" parent="Container/VBoxContainer/Bottom/ForthBox/Info/Life"]
margin_right = 27.0
margin_bottom = 14.0
text = "Life:"

[node name="LifeValue" type="Label" parent="Container/VBoxContainer/Bottom/ForthBox/Info/Life"]
margin_left = 31.0
margin_right = 39.0
margin_bottom = 14.0
text = "3"

[node name="Mana" type="HBoxContainer" parent="Container/VBoxContainer/Bottom/ForthBox/Info"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 32.0

[node name="ManaLabel" type="Label" parent="Container/VBoxContainer/Bottom/ForthBox/Info/Mana"]
margin_right = 38.0
margin_bottom = 14.0
text = "Mana:"

[node name="ManaValue" type="Label" parent="Container/VBoxContainer/Bottom/ForthBox/Info/Mana"]
margin_left = 42.0
margin_right = 50.0
margin_bottom = 14.0
text = "3"

[node name="Portrait" type="TextureRect" parent="Container/VBoxContainer/Bottom/ForthBox"]
margin_left = 280.0
margin_right = 318.0
margin_bottom = 38.0
texture = ExtResource( 1 )
